# thepersonalmodelcompany

./: .gitignore  CONTINUE.md  README.md  analysis.md  personal-model-company-analysis.md  pyproject.toml  railway.json
design/: README.md  brief.md  globals.css.applied
design/app/: 4-5-train.tsx  APP-FLOW.md  README.md  globals-app-additions.css  globals-eval-chat-additions.css
desktop/: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
desktop/capabilities/: default.json
desktop/examples/: build_graph.rs  pmc_ingest.rs  test_imessage.rs
desktop/icons/: README.md  icon.icns
desktop/src/: lib.rs  main.rs
desktop/src/extract/: bookmarks.rs  calendar.rs  call_history.rs  chrome.rs  contacts.rs  editor_state.rs  files.rs  icloud_drive.rs  imessage_enrich.rs  locations.rs  mail_enrich.rs  mod.rs  music.rs  notes_enrich.rs  notifications.rs  photo_concepts.rs  photos.rs  reminders.rs  safari.rs  screen_time.rs  shell.rs  slack.rs  voice_memos.rs  wallet.rs
desktop/src/graph/: mod.rs  schema.rs  store.rs  watermarks.rs
desktop/src/ingest/: imessage.rs  mail.rs  mod.rs  notes.rs
desktop/src/schedule/: config.rs  mod.rs
desktop/src/synthesis/: entity_resolve.rs  episodes.rs  mod.rs  open_loops.rs  themes.rs
docs/: current-architecture-audit.md  deploy-railway-backend.md  frontier-personal-model-plan.md
pmc/: __init__.py
pmc/actions/: __init__.py  policy.py  registry.py  schema.py  service.py
pmc/actions/adapters/: __init__.py  base.py  local_files.py
pmc/agent/: __init__.py  crypto.py  prompts.py  router.py
pmc/agent/providers/: anthropic.py  base.py  google.py  openai.py  openrouter.py  registry.py
pmc/auth/: __init__.py  email.py  middleware.py  router.py  store.py  tokens.py
pmc/billing/: __init__.py  router.py  service.py
pmc/cli/: __init__.py  chat.py  configure.py  context.py  doctor.py  ingest.py  learn.py  local_config.py  main.py  onboard.py  reading_cmd.py  sandbox.py  serve_cmd.py  temporal.py  time_cmd.py  ui.py
pmc/consolidator/: __init__.py  agenda.py  categorize.py  characterize.py  reading.py  run.py  salience.py  time_model.py
pmc/curate/: __init__.py  clean.py  dedup.py  llm.py  pii.py  pipeline.py  quality.py  splitter.py  style_profile.py  supervisor.py  synthesize.py
pmc/eval/: __init__.py  benchmarks.py  deploy_supervisor.py  factual_eval.py  gate.py  generator.py  judges.py  preference_eval.py  privacy_eval.py  prompts.py  runner.py  style_eval.py
pmc/ingest/: __init__.py  base.py  documents.py  email_mbox.py  imessage.py  normalize.py  text.py  whatsapp.py
pmc/memory/: __init__.py  embeddings.py  identity.py  incremental.py  retriever.py  store.py  sync.py
pmc/memory/recall/: __init__.py  __main__.py  consolidate.py  embed.py  inject.py  migrate.py  narrative.py  preview.py  retrieve.py  schema.py  store.py  supervisor.py  working.py
pmc/orchestrator/: __init__.py  cli.py  data_source.py  drift.py  monitor.py  pipeline.py  refresh.py  runs_ledger.py  scheduler.py
pmc/schema/: __init__.py  annotations.py  base_models.py  conversation.py  training.py  user.py  verification.py
pmc/serve/: __init__.py  __main__.py  api.py  engine.py  engine_mlx.py  engine_together.py  export.py  mcp_server.py  memory_context.py  registry.py  schema.py  server.py
pmc/serve/routes/: actions.py  world.py
pmc/storage/: __init__.py  action_store.py  artifact_store.py  audit.py  deletion.py  founders.py  graph_store.py  paths.py  redactions.py  user_store.py  verification_store.py
pmc/synthesis/: __init__.py  causal.py  drift.py  patterns.py  threads.py  transcripts.py
pmc/train/: __init__.py  __main__.py  bundle.py  checkpoint.py  checkpoint_sampler.py  config.py  dataset.py  dpo.py  formatter.py  mlx_trainer.py  modal_trainer.py  reward_model.py  sft.py  together_trainer.py
pmc/watch/: __init__.py  daemon.py  event.py  launchd.py  router.py
pmc/watch/classifier/: __init__.py  learn.py  llm.py  rules.py
pmc/watch/sources/: __init__.py  fs.py  sqlite.py  workspace.py
pmc/world/: __init__.py  scanner.py  schema.py  store.py
scripts/: dev.sh  install.sh  release.sh
tests/: test_actions_runtime.py  test_agent.py  test_auth.py  test_base_models.py  test_curate.py  test_eval.py  test_founders.py  test_ingest.py  test_memory.py  test_orchestrator.py  test_schema.py  test_serve.py  test_storage.py  test_together_engine.py  test_together_trainer.py  test_train.py  test_verification.py  test_world.py
web/: .env.example  .gitignore  README.md  bunfig.toml  drizzle.config.ts  middleware.ts  next.config.ts  package.json  railway.json
web/app/: globals.css  layout.tsx  page.tsx  tokens.css
web/app/actions/: page.tsx
web/app/chat/: page.tsx
web/app/confirm/: page.tsx
web/app/connect/: page.tsx
web/app/contact/: page.tsx
web/app/curate/: page.tsx
web/app/download/: page.tsx
web/app/eval/: page.tsx
web/app/first-meeting/: page.tsx
web/app/knowledge-update/: page.tsx
web/app/other-platforms/: page.tsx
web/app/privacy/: page.tsx
web/app/reading/: page.tsx
web/app/right-now/: page.tsx
web/app/sign-in/: page.tsx
web/app/terms/: page.tsx
web/app/train/: page.tsx
web/app/welcome/: page.tsx
web/components/: brand.tsx  items-counter.tsx  native-source-row.tsx  source-row.tsx
web/components/app/: action-sandbox-screen.tsx  agent-settings-screen.tsx  capability-pulse.tsx  chat-screen.tsx  connect-screen.tsx  curate-screen.tsx  eval-screen.tsx  first-launch-screen.tsx  first-meeting.tsx  memory-web.tsx  permissions-screen.tsx  reading-screen.tsx  settings-drawer.tsx  sign-in-screen.tsx  training-screen.tsx
web/components/landing/: landing-sections.tsx
web/components/shared/: brand-mark.tsx  letter-cascade.tsx
web/components/ui/: button.tsx
web/hooks/: use-in-view.ts  use-user.ts
web/lib/: auth.ts  demo-user.ts  pmc-client.ts  runtime.ts  tools.ts
web/lib/api/: agent.ts  auth.ts  client.ts  graph.ts  knowledge.ts  threads.ts
web/lib/db/: index.ts  schema.ts  seed.ts
web/public/downloads/: PersonalModelCompany.dmg
web/scripts/: build-tauri.sh  predeploy.ts
(+6 files in other folders)
