[project]
name = "pmc"
version = "0.1.0"
description = "Personal Model Company — train personal AI models from your own data"
requires-python = ">=3.12"
dependencies = [
    # Core schema layer used everywhere
    "pydantic>=2.7",
    # API surface — `python -m pmc.serve` boots a uvicorn/fastapi app
    # against any engine. These aren't optional in practice; the
    # `[serve]` extra used to gate them but Railway / production
    # deploys broke when they weren't installed by default.
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    # LLM clients — Anthropic for memory consolidation + the curate /
    # memory / deploy supervisors; OpenAI client for the
    # OpenAI-compatible Together AI inference + Together-hosted
    # custom models. Required at backend boot whenever TogetherEngine
    # is the inference engine or supervisors run.
    "anthropic>=0.25",
    "openai>=1.30",
    # Auth: account/session storage on SQLite by default, Postgres
    # via psycopg when DATABASE_URL is set (Railway).
    "psycopg[binary]>=3.1",
    # Magic-link email delivery via Resend. Falls back to console
    # logging if RESEND_API_KEY isn't set.
    "resend>=0.7",
    # Stripe for subscription billing — Frontier monthly. SDK is
    # imported lazily by pmc.billing.service so missing keys don't
    # break boot, only the billing endpoints.
    "stripe>=8.0",
    # At-rest encryption for user-supplied BYOM API keys
    # (Anthropic / OpenAI / Google / OpenRouter). Fernet wraps the
    # keys with a server-side-derived secret. See pmc/agent/crypto.py.
    "cryptography>=42.0",
    # Terminal UI for `pmc chat` — panels, streamed markdown rendering,
    # spinners, tables. rich is the entire visual surface of the CLI.
    "rich>=13.7",
    # Input handling with history + ctrl-r search + multiline editing.
    "prompt_toolkit>=3.0",
    # Filesystem event watcher for `pmc watch` — wraps FSEvents on macOS,
    # inotify on Linux. Used by pmc.watch.sources.fs to fire the gate on
    # writes to Messages, Mail, voice memos, iCloud Drive, etc.
    "watchdog>=4.0",
    # PyObjC bridge — used by pmc.watch.sources.workspace to listen to
    # NSWorkspace notifications (foreground app changes, sleep/wake,
    # screen lock). macOS-only; pip resolves these conditionally.
    "pyobjc-core>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0 ; sys_platform == 'darwin'",
    # HTML parsing for the reading module — pulls Safari history URLs
    # and extracts the readable main text so the agent can reconstruct
    # lines of thinking from what was actually on screen.
    "beautifulsoup4>=4.12",
    # MCP — exposes the portrait + time model + reading layer to any
    # connecting agent (Claude Desktop, Cursor, Continue, …).
    # `pmc serve --mcp` is how PMC plugs into the rest of the
    # agent ecosystem.
    "mcp>=1.0",
]

[project.scripts]
pmc = "pmc.orchestrator.cli:main"

[project.optional-dependencies]
ingest = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "beautifulsoup4>=4.12",
    "python-docx>=1.0",
    "PyPDF2>=3.0",
]
train = [
    "torch>=2.3",
    "transformers>=4.40",
    "peft>=0.11",
    "trl>=0.9",
    "datasets>=2.19",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
]
# NOTE: `eval` and `serve` used to gate the LLM clients + uvicorn / fastapi.
# Those moved into the base `dependencies` block above because every
# production deploy needed them and the optional gating just broke things.
# Kept here as empty markers so existing `pip install pmc[serve]` /
# `pip install pmc[eval]` commands and metadata don't error out.
eval = []
serve = []
serve-gpu = [
    "pmc[serve]",
    "vllm>=0.5",
]
modal = [
    "modal>=0.66",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "fastapi>=0.111",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
all = ["pmc[ingest,train,eval,serve,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
