[package]
name = "pmc-desktop"
version = "0.1.0"
description = "The Personal Model Company — Mac native app"
authors = ["The Personal Model Company"]
edition = "2021"
rust-version = "1.75"

# Library target — Tauri 2 uses a lib + bin split so the same logic
# can be used in mobile/desktop entry points.
[lib]
name = "pmc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
